2011-10-06  Anna Cavender  <annacc@chromium.org>

        Adding parens in WebVTTParser.cpp to appease compiler preferences.
        https://bugs.webkit.org/show_bug.cgi?id=69460

        Reviewed by David Levin.

        No new tests. No new functionality.

        * html/track/WebVTTParser.cpp:
        (WebCore::WebVTTParser::constructTreeFromToken):

2011-10-06  Fady Samuel  <fsamuel@chromium.org>

        Code clean-up: Make RenderObject::absoluteBoundingBoxRect and associated methods const and make its parameter useTransforms no longer default to false
        https://bugs.webkit.org/show_bug.cgi?id=69009

        Reviewed by Simon Fraser.

        Upcoming patches may make use of absoluteBoundingBoxRect on a const RenderObject, so this needed to be fixed.
        Making useTransforms default to true instead of false and replacing instances of absoluteBoundingBoxRect() to
        absoluteBoundingBoxRectIgnoringTransforms() partially addreses // FIXME: useTransforms should go away eventually.

        * WebCore.exp.in:
        * dom/Element.cpp:
        (WebCore::Element::screenRect):
        * dom/Node.cpp:
        (WebCore::Node::getRect):
        (WebCore::Node::renderRect):
        * html/shadow/SliderThumbElement.cpp:
        (WebCore::SliderThumbElement::setPositionFromPoint):
        * html/shadow/TextControlInnerElements.cpp:
        (WebCore::InputFieldSpeechButtonElement::startSpeechInput):
        * inspector/DOMNodeHighlighter.cpp:
        * plugins/IFrameShimSupport.cpp:
        (WebCore::getPluginOcclusions):
        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::absoluteRects):
        (WebCore::RenderBlock::absoluteQuads):
        * rendering/RenderBlock.h:
        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::absoluteRects):
        (WebCore::RenderBox::absoluteQuads):
        * rendering/RenderBox.h:
        * rendering/RenderFileUploadControl.cpp:
        (WebCore::RenderFileUploadControl::paintObject):