@@ -1,3 +1,14 @@
+2011-10-06  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r96861.
+        http://trac.webkit.org/changeset/96861
+        https://bugs.webkit.org/show_bug.cgi?id=69573
+
+        This patch didn't compile on windows (Requested by annacc on
+        #webkit).
+
+        * features.gypi:
+
 2011-10-06  Anna Cavender  <annacc@chromium.org>
 
         Turn ENABLE_VIDEO_TRACK on for chromium.
